# src/services/models/AccountInfo.ts
@@ -1,0 +1,24 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import type { AccountInfoRes } from './AccountInfoRes';
+import type { CommonRes } from './CommonRes';
+
+/**
+ * @description success
+ */
+export type AccountInfo200 = CommonRes & {
+  /**
+   * @type object
+   */
+  result: AccountInfoRes;
+};
+
+export type AccountInfoQueryResponse = AccountInfo200;
+
+export interface AccountInfoQuery {
+  Response: AccountInfo200;
+  Errors: any;
+}
