# src/services/models/AccountInfoRes.ts
@@ -1,0 +1,27 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+export interface AccountInfoRes {
+  /**
+   * @type string
+   */
+  email: string;
+  /**
+   * @type string
+   */
+  name: string;
+  /**
+   * @type string
+   */
+  nickname: string;
+  /**
+   * @type string
+   */
+  phone: string;
+  /**
+   * @type string
+   */
+  avatar: string;
+}
