# src/services/msw/accountController/accountInfoHandler.ts
@@ -1,0 +1,24 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { http } from 'msw';
+
+import type { AccountInfoQueryResponse } from '../../models/AccountInfo';
+
+import { createAccountInfoQueryResponseFaker } from '../../mocks/accountController/createAccountInfoFaker';
+
+export function accountInfoHandler(data?: AccountInfoQueryResponse | ((info: Parameters<Parameters<typeof http.get>[1]>[0]) => Response)) {
+  return http.get('/api/v1/admin_system/account/info', (info) => {
+    if (typeof data === 'function')
+      return data(info);
+
+    return new Response(JSON.stringify(data || createAccountInfoQueryResponseFaker(data)), {
+      status: 200,
+      headers: {
+        'Content-Type': 'application/json',
+      },
+    });
+  });
+}
