# src/services/msw/accountController/accountLogoutHandler.ts
@@ -1,0 +1,24 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { http } from 'msw';
+
+import type { AccountLogoutMutationResponse } from '../../models/AccountLogout';
+
+import { createAccountLogoutMutationResponseFaker } from '../../mocks/accountController/createAccountLogoutFaker';
+
+export function accountLogoutHandler(data?: AccountLogoutMutationResponse | ((info: Parameters<Parameters<typeof http.post>[1]>[0]) => Response)) {
+  return http.post('/api/v1/admin_system/account/logout', (info) => {
+    if (typeof data === 'function')
+      return data(info);
+
+    return new Response(JSON.stringify(data || createAccountLogoutMutationResponseFaker(data)), {
+      status: 200,
+      headers: {
+        'Content-Type': 'application/json',
+      },
+    });
+  });
+}
