# src/services/zod/accountInfoResSchema.ts
@@ -1,0 +1,16 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4';
+
+export const accountInfoResSchema = z.object({
+  email: z.string(),
+  name: z.string(),
+  nickname: z.string(),
+  phone: z.string(),
+  avatar: z.string(),
+});
+
+export type AccountInfoResSchema = z.infer<typeof accountInfoResSchema>;
